# vkusvill-green-labels-notifier

./: .cruft.json  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  Makefile  README.md  alembic.ini  cookiecutter-config-file.yml  docker-compose.yml  pyproject.toml  pyproject.toml.bak  test_vkusvill_settings.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml  vkusvill_green_labels.yml
migrations/: env.py  script.py.mako
migrations/versions/: 2024_09_22_1816-3ee3d973f8d0_add_user_and_settings.py  2024_10_10_2332-8d59a3cd2727_add_filter.py  2024_10_11_1929-d2dc412bc35e_separate_location_tables.py  2024_10_11_1930-6d5e1b41fec6_move_locations_to_new_table.py  2024_10_11_2323-8ea5724558d1_make_address_in_settings_nullable.py  2024_10_11_2355-f30b71eff838_remove_old_address_fields.py  2024_10_12_1407-8e458a31aae9_add_filters.py  2024_10_12_1615-272acf3925ed_add_filters.py  2024_10_26_1257-249977e15076_make_telegram_id_int64.py  2025_04_16_0133-8f594abdd128_add_notification_type.py  2025_04_16_0142-f45bb3ceb277_add_notification_type.py  2025_10_27_2115-69cd8b2f1bac_add_increase_notification_type.py  a49f88427659_add_user_and_settings.py
src/vkusvill_green_labels/: bot.py  settings.py  updater.py  validators.py
src/vkusvill_green_labels/services/: vkusvill.py
tests/: __init__.py  conftest.py  factories.py  test_filter_service.py  test_green_labels_filters.py  test_green_labels_repo.py  test_import.py  test_updater.py  test_user_repo.py  test_user_service.py  test_vkusvill_api.py  test_vkusvill_service.py
tests/fixtures/: containers.py  db.py  entities.py  http_clients.py  repositories.py  services.py
tests/static/: address_info.json  address_info_not_found.json  green_labels.json  green_labels_2.json  green_labels_response.json  shop_info.json  token_response.json
vkusvill_green_labels/: __init__.py  bot.py  dependencies.py  jobs.py  main.py  settings.py  storage.py  updater.py  validators.py
vkusvill_green_labels/core/: database.py  rate_limits.py  redis.py  settings.py  setup_logging.py  setup_sentry.py
vkusvill_green_labels/core/middleware/: sentry.py
vkusvill_green_labels/handlers/: __init__.py  command.py  filters.py  location.py  menu.py  notifications.py
vkusvill_green_labels/keyboards/: client.py  filters.py  location.py  menu.py  notifications.py
vkusvill_green_labels/migrations/: env.py
vkusvill_green_labels/migrations/versions/: 145ea4bda68a_add_user_and_settings.py
vkusvill_green_labels/models/: __init__.py  base.py  filter_operators.py  filters.py  types.py  user.py  user_settings.py  vkusvill.py
vkusvill_green_labels/models/db/: __init__.py  address.py  filter.py  user.py  user_settings.py
vkusvill_green_labels/models/db/utils/: pydantic_type.py
vkusvill_green_labels/repositories/: filter.py  green_labels.py  user.py  vkusvill_user_settings.py
vkusvill_green_labels/routes/: health.py
vkusvill_green_labels/services/: filter_service.py  notification_service.py  updater_service.py  user_service.py  vkusvill.py  vkusvill_api.py  vkusvill_service.py
